--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
-    "name": "mh-dashboard",
-    "private": true,
+    "name": "minehut-dashboard",
     "version": "0.1.0",
+    "private": true,
     "scripts": {
-        "dev": "vite",
-        "build": "vue-tsc --noEmit && vite build",
-        "preview": "vite preview"
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
     },
     "dependencies": {
-        "pinia": "^2.0.14",
-        "vue": "^3.2.25",
-        "vue-router": "4"
+        "next": "12.2.1",
+        "react": "18.2.0",
+        "react-dom": "18.2.0"
     },
     "devDependencies": {
-        "@vitejs/plugin-vue": "^2.3.0",
-        "typescript": "^4.5.4",
-        "vite": "^2.9.0",
-        "vue-tsc": "^0.29.8"
+        "@types/node": "18.0.3",
+        "@types/react": "18.0.15",
+        "@types/react-dom": "18.0.6",
+        "eslint": "8.19.0",
+        "eslint-config-next": "12.2.1",
+        "typescript": "4.7.4"
     }
 }
