--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "minehut-dashboard",
+    "name": "mh-dashboard",
     "version": "0.1.0",
     "private": true,
     "scripts": {
@@ -9,20 +9,19 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "@heroicons/react": "^1.0.6",
-        "next": "12.2.1",
+        "@types/node": "18.16.3",
+        "@types/react": "18.2.0",
+        "@types/react-dom": "18.2.1",
+        "autoprefixer": "10.4.14",
+        "next": "13.3.2",
+        "postcss": "8.4.23",
         "react": "18.2.0",
-        "react-dom": "18.2.0"
+        "react-dom": "18.2.0",
+        "react-icons": "^4.9.0",
+        "tailwindcss": "3.3.2",
+        "typescript": "5.0.4"
     },
     "devDependencies": {
-        "@types/node": "18.0.3",
-        "@types/react": "18.0.15",
-        "@types/react-dom": "18.0.6",
-        "autoprefixer": "^10.4.7",
-        "eslint": "8.19.0",
-        "eslint-config-next": "12.2.1",
-        "postcss": "^8.4.14",
-        "tailwindcss": "^3.1.6",
-        "typescript": "4.7.4"
+        "daisyui": "^3.4.0"
     }
 }
